--- a/FormularioContato-main (1)/FormularioContato-main/index.html
+++ b/FormularioContato-main (1)/FormularioContato-main/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <h2>Contato</h2>
-        <form action="https://api.staticforms.xyz/submit" method="post">
+        <form action="https://api.staticforms.xyz/samuelcauabarbosa114@gmail.com" method="post">
             <label>Nome</label>
             <input type="text" name="name" placeholder="Digite seu nome" autocomplete="off" required>
             <label>Email</label>
