att de adição de criação do site

--- a/site_max_cahveiro/index.html
+++ b/site_max_cahveiro/index.html
@@ -880,6 +880,13 @@
       &copy; 2023 Todos os direitos reservados por
       Max Chaveiro
     </p>
+
+    <p>
+      &copy; Desenvolvido por 
+      <a href="https://www.instagram.com/samuelbarbosasl/">
+      Samuel Cauã Barbosa
+    </a>
+    </p>
   </section>
 
   <!-- seção de rodapé -->
