att de adição de politica de privacidade e termos, pre-loader reduzido

--- a/Chaveiro/index.html
+++ b/Chaveiro/index.html
@@ -871,6 +871,13 @@
         </p>
       </div>
     </div>
+    <div class="info_social1">
+      <ul>
+        <!-- <li><a href="#">Inicio</a></li> -->
+        <li><a href="cookis/politica.html">Política de Privacidade</a></li>
+        <li><a href="cookis/termos.html">Termos e Condições</a></li>
+      </ul>
+    </div>
   </section>
 
   <!-- Fim seção de informações -->
@@ -878,12 +885,12 @@
   <!-- seção de rodapé -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2023 Todos os direitos reservados por
+      Copyright  &copy; 2023 Todos os direitos reservados por
       Max Chaveiro
     </p>
 
     <p>
-      &copy; Desenvolvido por 
+      Copyright  &copy; Desenvolvido por 
       <a href="https://www.instagram.com/samuelbarbosasl/">
       Samuel Cauã Barbosa
     </a>
@@ -908,7 +915,7 @@
       <p>Este site usa cookies para garantir que você obtenha a melhor experiência em nosso site.</p>
       <div class="buttons">
         <button class="item">Aceitar</button>
-        <a href="#" class="item">Saiba mais</a>
+        <a href="cookis/politica.html" class="item">Saiba mais</a>
       </div>
     </div>
   </div>
