--- a/Chaveiro/index.html
+++ b/Chaveiro/index.html
@@ -24,7 +24,7 @@
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -466,6 +466,7 @@
   </section>
   <!-- fim da seção do portfólio -->
   <!-- seção de notícias -->
+  
 
   <section class="news_section layout_padding">
     <div class="container">
@@ -487,11 +488,17 @@
             <div class="img-box">
               <img src="images/n-1.png" alt="">
             </div>
+            
             <div class="action-box">
               <div class="action">
-                <a href="https://www.instagram.com/max_chaveiro/">
-                  <img src="images/like.png" alt="">
-                </a>
+
+              <a >
+                <button id="likeButton">
+                  <i class="fa fa-thumbs-up"></i>
+                  <span id="likeCount">0</span>
+                </button>   
+              </a>
+
                 <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="images/comment.png" alt="">
                 </a>
@@ -517,6 +524,9 @@
             </div>
           </div>
         </div>
+
+
+      
         <div class="col-md-4">
           <div class="box">
             <div class="img-box">
@@ -524,8 +534,11 @@
             </div>
             <div class="action-box">
               <div class="action">
-                <a href="https://www.instagram.com/max_chaveiro/">
-                  <img src="images/like.png" alt="">
+                <a >
+                  <button id="likeButton">
+                    <i class="fa fa-thumbs-up"></i>
+                    <span id="likeCount">0</span>
+                  </button>   
                 </a>
 
                 <a href="https://www.instagram.com/max_chaveiro/">
@@ -560,8 +573,11 @@
             </div>
             <div class="action-box">
               <div class="action">
-                <a href="https://www.instagram.com/max_chaveiro/">
-                  <img src="images/like.png" alt="">
+                <a>
+                  <button id="likeButton">
+                    <i class="fa fa-thumbs-up"></i>
+                    <span id="likeCount">0</span>
+                  </button>   
                 </a>
                 <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="images/comment.png" alt="">
@@ -934,6 +950,7 @@
   <script src="assets/js/cookis.js "></script>
   <script src="assets/js/custom.js"></script>
   <script src="assets/js/owl.js"></script>
+  <script src="assets/js/insta.js"></script>
 
 
 </body>
