--- a/Chaveiro/index.html
+++ b/Chaveiro/index.html
@@ -890,8 +890,8 @@
     <div class="info_social1">
       <ul>
         <!-- <li><a href="#">Inicio</a></li> -->
-        <li><a href="cookis/politica.html">Política de Privacidade</a></li>
-        <li><a href="cookis/termos.html">Termos e Condições</a></li>
+        <li><a href="politica.html">Política de Privacidade</a></li>
+        <li><a href="termos.html">Termos e Condições</a></li>
       </ul>
     </div>
   </section>
@@ -931,7 +931,7 @@
       <p>Este site usa cookies para garantir que você obtenha a melhor experiência em nosso site.</p>
       <div class="buttons">
         <button class="item">Aceitar</button>
-        <a href="cookis/politica.html" class="item">Saiba mais</a>
+        <a href="politica.html" class="item">Saiba mais</a>
       </div>
     </div>
   </div>
