--- a/Chaveiro/index.html
+++ b/Chaveiro/index.html
@@ -492,12 +492,8 @@
             <div class="action-box">
               <div class="action">
 
-              <a >
-                <button id="likeButton">
-                  <i class="fa fa-thumbs-up"></i>
-                  <span id="likeCount">0</span>
-                </button>   
-              </a>
+                <button id="like-button">Like</button>
+                <span id="like-count">0</span>
 
                 <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="images/comment.png" alt="">
