--- a/Chaveiro/termos.html
+++ b/Chaveiro/termos.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="/Chaveiro/images/logo1.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo1.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 
     <title>Termos Condições</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/Chaveiro/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="/Chaveiro/css/bootstrap.css">
-    <link rel="stylesheet" href="/Chaveiro/css/flex-slider.css">
-    <link rel="stylesheet" href="/Chaveiro/css/fontawesome.css">
-    <link rel="stylesheet" href="/Chaveiro/css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/flex-slider.css">
+    <link rel="stylesheet" href="css/fontawesome.css">
+    <link rel="stylesheet" href="css/style.css">
 <!--
 
 -->
@@ -30,24 +30,24 @@
     
 
   <!-- Additional CSS Files -->
-  <link rel="stylesheet" href="/Chaveiro/css/bootstrap.css">
-  <link rel="stylesheet" href="/Chaveiro/css/tooplate-main.css">
-  <link rel="stylesheet" href="/Chaveiro/css/flex-slider.css"> 
-  <link rel="stylesheet" href="/Chaveiro/css/owl.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/tooplate-main.css">
+  <link rel="stylesheet" href="css/flex-slider.css"> 
+  <link rel="stylesheet" href="css/owl.css">
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="/Chaveiro/css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
   <!-- fontes style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet">
   <!-- Estilos personalizados para este modelo -->
-  <link href="/Chaveiro/css/style.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
   <!-- responsivel style -->
-  <link href="/Chaveiro/css/responsive.css" rel="stylesheet" />
+  <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -55,28 +55,28 @@
   <!-- início do preloader -->
   <div class="loader_bg">
     <div class="img-container">
-      <img class="cap" src="/Chaveiro/pre-loader/cap.png" alt="">
-      <img class="cog-01" src="/Chaveiro/pre-loader/cog-01.png" alt="">
-      <img class="cog-03" src="/Chaveiro/pre-loader/cog-03.png" alt="">
-      <img class="cog-04" src="/Chaveiro/pre-loader/cog-04.png" alt="">
-      <img class="cog-02" src="/Chaveiro/pre-loader/cog-02.png" alt="">
-      <img class="cog-05" src="/Chaveiro/pre-loader/cog-05.png" alt="">
-      <img class="cog-06" src="/Chaveiro/pre-loader/cog-06.png" alt="">
-      <img class="cog-07" src="/Chaveiro/pre-loader/cog-07.png" alt="">
-      <img class="cog-08" src="/Chaveiro/pre-loader/cog-08.png" alt="">
-      <img class="cog-09" src="/Chaveiro/pre-loader/cog-09.png" alt="">
-      <img class="cog-10" src="/Chaveiro/pre-loader/cog-10.png" alt="">
-      <img class="cog-11" src="/Chaveiro/pre-loader/cog-11.png" alt="">
-      <img class="cog-12" src="/Chaveiro/pre-loader/cog-12.png" alt="">
-      <img class="cog-13" src="/Chaveiro/pre-loader/cog-13.png" alt="">
-      <img class="cog-14" src="/Chaveiro/pre-loader/cog-14.png" alt="">
-      <img class="cog-15" src="/Chaveiro/pre-loader/cog-15.png" alt="">
-      <img class="cog-16" src="/Chaveiro/pre-loader/cog-16.png" alt="">
-      <img class="cog-17" src="/Chaveiro/pre-loader/cog-17.png" alt="">
-      <img class="cog-18" src="/Chaveiro/pre-loader/cog-18.png" alt="">
-      <img class="cog-19" src="/Chaveiro/pre-loader/cog-19.png" alt="">
-      <img class="cog-20" src="/Chaveiro/pre-loader/cog-20.png" alt="">
-      <img class="cog-21" src="/Chaveiro/pre-loader/cog-21.png" alt="">
+      <img class="cap" src="pre-loader/cap.png" alt="">
+      <img class="cog-01" src="pre-loader/cog-01.png" alt="">
+      <img class="cog-03" src="pre-loader/cog-03.png" alt="">
+      <img class="cog-04" src="pre-loader/cog-04.png" alt="">
+      <img class="cog-02" src="pre-loader/cog-02.png" alt="">
+      <img class="cog-05" src="pre-loader/cog-05.png" alt="">
+      <img class="cog-06" src="pre-loader/cog-06.png" alt="">
+      <img class="cog-07" src="pre-loader/cog-07.png" alt="">
+      <img class="cog-08" src="pre-loader/cog-08.png" alt="">
+      <img class="cog-09" src="pre-loader/cog-09.png" alt="">
+      <img class="cog-10" src="pre-loader/cog-10.png" alt="">
+      <img class="cog-11" src="pre-loader/cog-11.png" alt="">
+      <img class="cog-12" src="pre-loader/cog-12.png" alt="">
+      <img class="cog-13" src="pre-loader/cog-13.png" alt="">
+      <img class="cog-14" src="pre-loader/cog-14.png" alt="">
+      <img class="cog-15" src="pre-loader/cog-15.png" alt="">
+      <img class="cog-16" src="pre-loader/cog-16.png" alt="">
+      <img class="cog-17" src="pre-loader/cog-17.png" alt="">
+      <img class="cog-18" src="pre-loader/cog-18.png" alt="">
+      <img class="cog-19" src="pre-loader/cog-19.png" alt="">
+      <img class="cog-20" src="pre-loader/cog-20.png" alt="">
+      <img class="cog-21" src="pre-loader/cog-21.png" alt="">
     </div>
   </div>
 
@@ -88,8 +88,8 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="/Chaveiro/index.html">
-            <img src="/Chaveiro/images/logo.png" alt="">
+          <a class="navbar-brand" href="index.html">
+            <img src="images/logo.png" alt="">
             <span>
               Max Chaveiro
             </span>
@@ -103,28 +103,28 @@
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/Chaveiro/index.html">Inicio <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Chaveiro/index.html">Sobre </a>
+                  <a class="nav-link" href="index.html">Sobre </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Chaveiro/index.html">Serviço </a>
+                  <a class="nav-link" href="index.html">Serviço </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Chaveiro/index.html"> Portfolio</a>
+                  <a class="nav-link" href="index.html"> Portfolio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Chaveiro/index.html">Novidades </a>
+                  <a class="nav-link" href="index.html">Novidades </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Chaveiro/index.html">Contato</a>
+                  <a class="nav-link" href="index.html">Contato</a>
                 </li>
               </ul>
             </div>
             <div class="quote_btn-container  d-flex justify-content-center">
               <a href="tel:+5535999853337">
-                <img src="/Chaveiro/images/call.png" alt="">
+                <img src="mages/call.png" alt="">
                 Telefone : +55 (35) 99985-3337
               </a>
               <a href="mailto:max.prestacao@gmail.com?subject=Servico de chaves, fechaduras e abertura de automoveis.">
@@ -155,7 +155,7 @@
   
     <!-- seção de botão ao topo -->
     <a href="#topo" class="scrollToTop">
-        <img src="/Chaveiro/images/topo.png" alt="">
+        <img src="images/topo.png" alt="">
       </a>
     
   
@@ -167,23 +167,23 @@
       <div class="info_social">
         <div>
           <a href="https://www.facebook.com/Maximiano.jr">
-            <img src="/Chaveiro/images/facebook.png" alt="">
+            <img src="images/facebook.png" alt="">
           </a>
         </div>
         <div>
           <a href="mailto:max.prestacao@gmail.com?subject=Servico de chaves, fechaduras e abertura de automoveis.">
-            <img src="/Chaveiro/images/gmail.png" alt="">
+            <img src="images/gmail.png" alt="">
           </a>
         </div>
         <div>
           <a
             href="https://wa.me/5535999853337?text=Serviço%20de%20chaves%20,%20fechaduras%20e%20abertura%20de%20automóveis%20.%20">
-            <img src="/Chaveiro/images/whatsapp.png" alt="">
+            <img src="images/whatsapp.png" alt="">
           </a>
         </div>
         <div>
           <a href="https://www.instagram.com/max_chaveiro/">
-            <img src="/Chaveiro/images/instagram.png" alt="">
+            <img src="images/instagram.png" alt="">
           </a>
         </div>
       </div>
@@ -198,8 +198,8 @@
     <div class="info_social1">
       <ul>
         <!-- <li><a href="#">Inicio</a></li> -->
-        <li><a href="/Chaveiro/cookis/politica.html">Política de Privacidade</a></li>
-        <li><a href="/Chaveiro/cookis/termos.html">Termos e Condições</a></li>
+        <li><a href="cookis/politica.html">Política de Privacidade</a></li>
+        <li><a href="cookis/termos.html">Termos e Condições</a></li>
       </ul>
     </div>
   </section>
@@ -223,16 +223,16 @@
   <!-- seção de rodapé -->
 
     <!-- Bootstrap core JavaScript -->
-    <script src="/Chaveiro/js/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/Chaveiro/js/jquery/jquery-3.4.1.min.js "></script>
-    <script type="text/javascript" src="/Chaveiro/js/bootstrap.js"></script>
+    <script src="js/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery/jquery-3.4.1.min.js "></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
   
 
 
     <!-- Additional Scripts -->
-    <script src="/Chaveiro/assets/js/preloder.js"></script>
-    <script src="/Chaveiro/assets/js/scrolltopo.js"></script>
+    <script src="assets/js/preloder.js"></script>
+    <script src="assets/js/scrolltopo.js"></script>
 
   >
 
