att de funçao de like somente em um card

--- a/index.html
+++ b/index.html
@@ -492,12 +492,16 @@
             <div class="action-box">
               <div class="action">
 
-                <button id="like-button">Like</button>
-                <span id="like-count">0</span>
+              <a>
+                <button class="like-button">
+                  <i class="fa fa-heart-o"></i>
+                  <span class="like-count">0</span>
+                </button>
+              </a>
 
-                <a href="https://www.instagram.com/max_chaveiro/">
+                <!-- <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="Recursos/assets/icon/icon_card_noticias/comment.png" alt="">
-                </a>
+                </a> -->
 
                 <a href="javascript:void(0)" onclick="share()">
                   <img src="Recursos/assets/icon/icon_card_noticias/share.png" alt="">
@@ -530,16 +534,19 @@
             </div>
             <div class="action-box">
               <div class="action">
-                <a >
-                  <button id="likeButton">
-                    <i class="fa fa-thumbs-up"></i>
-                    <span id="likeCount">0</span>
-                  </button>   
-                </a>
 
+                <a>
+                  <button class="like-button">
+                    <i class="fa fa-heart-o"></i>
+                    <span class="like-count">0</span>
+                  </button>
+                </a>
+  
+                  
+<!-- 
                 <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="Recursos/assets/icon/icon_card_noticias/comment.png" alt="">
-                </a>
+                </a> -->
 
                 <a href="javascript:void(0)" onclick="share()">
                   <img src="Recursos/assets/icon/icon_card_noticias/share.png" alt="">
@@ -569,15 +576,19 @@
             </div>
             <div class="action-box">
               <div class="action">
+
                 <a>
-                  <button id="likeButton">
-                    <i class="fa fa-thumbs-up"></i>
-                    <span id="likeCount">0</span>
-                  </button>   
+                  <button class="like-button">
+                    <i class="fa fa-heart-o"></i>
+                    <span class="like-count">0</span>
+                  </button>
                 </a>
-                <a href="https://www.instagram.com/max_chaveiro/">
+  
+                
+                <!-- <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="Recursos/assets/icon/icon_card_noticias/comment.png" alt="">
-                </a>
+                </a> -->
+
                 <a href="javascript:void(0)" onclick="share()">
                   <img src="Recursos/assets/icon/icon_card_noticias/share.png" alt="">
                 </a>
@@ -946,7 +957,8 @@
   <script src="Recursos/assets/js/cookis.js "></script>
   <script src="Recursos/assets/js/custom.js"></script>
   <script src="Recursos/assets/js/owl.js"></script>
-  <script src="Recursos/assets/js/insta.js"></script>
+  <script src="Recursos/assets/js/like.js"></script>
+  <script src="Recursos/assets/js/like_1,js"></script>
 
 
 </body>
