att de likes funcional e teste de integrcao com o likes com o servidor

--- a/index.html
+++ b/index.html
@@ -493,14 +493,14 @@
               <div class="action">
 
               <a>
-                <button class="like-button">
+                <button  class="like_1like-button1">
                   <i class="fa fa-heart-o"></i>
-                  <span class="like-count">0</span>
+                  <span class="like_1like-count1">0</span>
                 </button>
               </a>
 
                 <!-- <a href="https://www.instagram.com/max_chaveiro/">
-                  <img src="Recursos/assets/icon/icon_card_noticias/comment.png" alt="">
+                  <img src="Recursos/assets/icon/icon_card_noticias/comment.png"alt="">
                 </a> -->
 
                 <a href="javascript:void(0)" onclick="share()">
@@ -536,16 +536,14 @@
               <div class="action">
 
                 <a>
-                  <button class="like-button">
+                  <button class="like_2like-button2">
                     <i class="fa fa-heart-o"></i>
-                    <span class="like-count">0</span>
+                    <span class="like_2like-count2">0</span>
                   </button>
                 </a>
   
-                  
-<!-- 
-                <a href="https://www.instagram.com/max_chaveiro/">
-                  <img src="Recursos/assets/icon/icon_card_noticias/comment.png" alt="">
+                <!-- <a href="https://www.instagram.com/max_chaveiro/">
+                  <img src="Recursos/assets/icon/icon_card_noticias/comment.png"alt="">
                 </a> -->
 
                 <a href="javascript:void(0)" onclick="share()">
@@ -578,9 +576,9 @@
               <div class="action">
 
                 <a>
-                  <button class="like-button">
+                  <button class="like_3like-button3">
                     <i class="fa fa-heart-o"></i>
-                    <span class="like-count">0</span>
+                    <span class="like_3like-count3">0</span>
                   </button>
                 </a>
   
@@ -944,6 +942,10 @@
   </div>
   <!-- seção de cokkis-->
 
+
+  <!-- Firebase Blibioteca -->
+
+
   <!-- Bootstrap core JavaScript -->
   <script src="Recursos/assets/js/js_blibioteca/js/jquery/jquery.min.js"></script>
   <script type="text/javascript" src="Recursos/assets/js/js_blibioteca/js/jquery/jquery-3.4.1.min.js "></script>
@@ -957,8 +959,8 @@
   <script src="Recursos/assets/js/cookis.js "></script>
   <script src="Recursos/assets/js/custom.js"></script>
   <script src="Recursos/assets/js/owl.js"></script>
-  <script src="Recursos/assets/js/like.js"></script>
-  <script src="Recursos/assets/js/like_1,js"></script>
+  <script src="Recursos/assets/js/like_1.js"></script>
+
 
 
 </body>
