att de correção de responsivel e criar  page contato

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Estilos personalizados para este modelo -->
   <link href="Recursos/assets/css/style.css" rel="stylesheet" />
   <!-- responsivel style -->
-  <link href="Recursos/css/responsive.css" rel="stylesheet" />
+  <link href="Recursos/assets/css/responsive.css" rel="stylesheet" />
 </head>
 
 <body>
