--- a/index.html
+++ b/index.html
@@ -492,12 +492,9 @@
             <div class="action-box">
               <div class="action">
 
-              <a>
-                <button  class="like_1like-button1">
-                  <i class="fa fa-heart-o"></i>
-                  <span class="like_1like-count1">0</span>
-                </button>
-              </a>
+                 <!-- Api do Fece de botao de like JavaScript -->
+                <div id="fb-root"></div>
+                <div class="fb-like" data-href="https://maxchaveiro.netlify.app" data-width="430px" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
 
                 <!-- <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="Recursos/assets/icon/icon_card_noticias/comment.png"alt="">
@@ -941,8 +938,8 @@
     </div>
   </div>
   <!-- seção de cokkis-->
-
-
+  <div id="fb-root"></div>
+  <div class="fb-like" data-href="https://maxchaveiro.netlify.app" data-width="100px" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
   <!-- Firebase Blibioteca -->
 
 
@@ -951,6 +948,9 @@
   <script type="text/javascript" src="Recursos/assets/js/js_blibioteca/js/jquery/jquery-3.4.1.min.js "></script>
   <script type="text/javascript" src="Recursos/assets/js/js_blibioteca/js/bootstrap.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+
+ <!-- Api do Fece de botao de like JavaScript -->
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v16.0" nonce="SJVoB0Gb"></script>
 
   <!-- Additional Scripts -->
   <script src="Recursos/assets/js/preloder.js"></script>
