att de teste de api like

--- a/index.html
+++ b/index.html
@@ -493,8 +493,8 @@
               <div class="action">
 
                  <!-- Api do Fece de botao de like JavaScript -->
-                <div id="fb-root"></div>
-                <div class="fb-like" data-href="https://maxchaveiro.netlify.app" data-width="430px" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+                 <div id="fb-root"></div>
+                 <div class="fb-like" data-href="https://maxchaveiro.netlify.app" data-width="500" data-layout="button_count" data-action="like" data-size="large" data-share="false"></div>
 
                 <!-- <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="Recursos/assets/icon/icon_card_noticias/comment.png"alt="">
@@ -532,12 +532,16 @@
             <div class="action-box">
               <div class="action">
 
-                <a>
+                <div id="fb-root"></div>
+                <div class="fb-like" data-href="https://maxchaveiro.netlify.app" data-width="500" data-layout="button_count" data-action="like" data-size="large" data-share="false"></div>
+
+
+                <!-- <a>
                   <button class="like_2like-button2">
                     <i class="fa fa-heart-o"></i>
                     <span class="like_2like-count2">0</span>
                   </button>
-                </a>
+                </a> -->
   
                 <!-- <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="Recursos/assets/icon/icon_card_noticias/comment.png"alt="">
@@ -572,13 +576,18 @@
             <div class="action-box">
               <div class="action">
 
-                <a>
+
+                <div id="fb-root"></div>
+                <div class="fb-like" data-href="https://maxchaveiro.netlify.app" data-width="500" data-layout="button_count" data-action="like" data-size="large" data-share="false"></div>
+
+
+                <!-- <a>
                   <button class="like_3like-button3">
                     <i class="fa fa-heart-o"></i>
                     <span class="like_3like-count3">0</span>
                   </button>
                 </a>
-  
+   -->
                 
                 <!-- <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="Recursos/assets/icon/icon_card_noticias/comment.png" alt="">
@@ -938,10 +947,6 @@
     </div>
   </div>
   <!-- seção de cokkis-->
-  <div id="fb-root"></div>
-  <div class="fb-like" data-href="https://maxchaveiro.netlify.app" data-width="100px" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
-  <!-- Firebase Blibioteca -->
-
 
   <!-- Bootstrap core JavaScript -->
   <script src="Recursos/assets/js/js_blibioteca/js/jquery/jquery.min.js"></script>
@@ -950,7 +955,7 @@
   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 
  <!-- Api do Fece de botao de like JavaScript -->
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v16.0" nonce="SJVoB0Gb"></script>
+ <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v16.0" nonce="hCnoIbYA"></script>
 
   <!-- Additional Scripts -->
   <script src="Recursos/assets/js/preloder.js"></script>
