att de botao de like funcional e armazena storage

--- a/index.html
+++ b/index.html
@@ -492,9 +492,14 @@
             <div class="action-box">
               <div class="action">
 
-                 <!-- Api do Fece de botao de like JavaScript -->
-                 <div id="fb-root"></div>
-                 <div class="fb-like" data-href="https://maxchaveiro.netlify.app" data-width="500" data-layout="button_count" data-action="like" data-size="large" data-share="false"></div>
+              <a>  
+                <button id="LikeButton1">
+                  <i class="fa fa-thumbs-up"></i>
+                    like
+                </button>
+
+              </a>
+                
 
                 <!-- <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="Recursos/assets/icon/icon_card_noticias/comment.png"alt="">
@@ -532,16 +537,14 @@
             <div class="action-box">
               <div class="action">
 
-                <div id="fb-root"></div>
-                <div class="fb-like" data-href="https://maxchaveiro.netlify.app" data-width="500" data-layout="button_count" data-action="like" data-size="large" data-share="false"></div>
 
-
-                <!-- <a>
-                  <button class="like_2like-button2">
-                    <i class="fa fa-heart-o"></i>
-                    <span class="like_2like-count2">0</span>
+                <a>  
+                  <button id="LikeButton2">
+                    <i class="fa fa-thumbs-up"></i>
+                      like
                   </button>
-                </a> -->
+  
+                </a>
   
                 <!-- <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="Recursos/assets/icon/icon_card_noticias/comment.png"alt="">
@@ -576,18 +579,12 @@
             <div class="action-box">
               <div class="action">
 
-
-                <div id="fb-root"></div>
-                <div class="fb-like" data-href="https://maxchaveiro.netlify.app" data-width="500" data-layout="button_count" data-action="like" data-size="large" data-share="false"></div>
-
-
-                <!-- <a>
-                  <button class="like_3like-button3">
-                    <i class="fa fa-heart-o"></i>
-                    <span class="like_3like-count3">0</span>
+                <a>  
+                  <button id="LikeButton3">
+                    <i class="fa fa-thumbs-up"></i>
+                      like
                   </button>
                 </a>
-   -->
                 
                 <!-- <a href="https://www.instagram.com/max_chaveiro/">
                   <img src="Recursos/assets/icon/icon_card_noticias/comment.png" alt="">
@@ -955,7 +952,6 @@
   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 
  <!-- Api do Fece de botao de like JavaScript -->
- <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v16.0" nonce="hCnoIbYA"></script>
 
   <!-- Additional Scripts -->
   <script src="Recursos/assets/js/preloder.js"></script>
@@ -964,6 +960,7 @@
   <script src="Recursos/assets/js/cookis.js "></script>
   <script src="Recursos/assets/js/custom.js"></script>
   <script src="Recursos/assets/js/owl.js"></script>
+  <script src="Recursos/assets/js/armazena_like/like_armazena.js"></script>
 
 
 
