--- a/Recursos/assets/arquivados/index.html
+++ b/Recursos/assets/arquivados/index.html
@@ -467,6 +467,19 @@
   <!-- fim da seção do portfólio -->
   <!-- seção de notícias -->
   
+  <style>
+    #like-button {
+background-color: blue;
+color: white;
+padding: 5px 10px;
+border-radius: 5px;
+}
+
+</style>
+
+<button id="like-button">Like</button>
+<p id="like-count">0</p>
+
 
   <section class="news_section layout_padding">
     <div class="container">
@@ -961,6 +974,7 @@
   <script src="Recursos/assets/js/custom.js"></script>
   <script src="Recursos/assets/js/owl.js"></script>
   <script src="Recursos/assets/js/armazena_like/like_armazena.js"></script>
+  <script src="Recursos/assets/js/armazena_like/like.js"></script>
 
 
 
