--- a/teste.html
+++ b/teste.html
@@ -74,6 +74,26 @@
         .popup button {
             margin-top: 10px;
         }
+
+        .popup label {
+            margin-bottom: 10px;
+            font-weight: bold;
+            /* tornar os rótulos em negrito */
+        }
+
+        /* Aumentar a altura das caixas de texto e fazer seus cantos um pouco arredondados */
+        .popup input[type="text"],
+        .popup input[type="email"],
+        .popup input[type="number"],
+        .popup input[type="tel"] {
+            height: 30px;
+            border-radius: 5px;
+        }
+
+        /* Adicionar margem superior para o botão de enviar */
+        .popup input[type="submit"] {
+            margin-top: 20px;
+        }
     </style>
     <script>
         // Função para abrir o popup
@@ -138,7 +158,13 @@
         }
 
         function validarNumeros(input) {
-            input.value = input.value.replace(/\D/g, ''); // Remove todos os caracteres não numéricos
+            var numericos = input.value.replace(/\D/g, ''); // Remove todos os caracteres não numéricos
+            var formatado = numericos.replace(/(\d{2})(\d{4,5})(\d{4})$/, "($1) $2-$3");
+            input.value = formatado;
+        }
+
+        function validarLetras(input) {
+            input.value = input.value.replace(/[^A-Za-z\s]/g, ''); // Remove todos os caracteres que não são letras ou espaços
         }
 
         function formatarCEP(input) {
@@ -200,10 +226,10 @@
 
         <form id="enderecoForm" onsubmit="handleSubmit(event)">
             <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" required>
+            <input type="text" id="nome" name="nome" required oninput="validarLetras(this)">
 
             <label for="sobrenome">Sobrenome:</label>
-            <input type="text" id="sobrenome" name="sobrenome" required>
+            <input type="text" id="sobrenome" name="sobrenome" required oninput="validarLetras(this)">
 
             <label for="cep">CEP:</label>
             <input type="text" id="cep" name="cep" required oninput="validarNumeros(this); formatarCEP(this)">
@@ -216,13 +242,13 @@
             <input type="text" id="numero" name="numero" required oninput="validarNumeros(this)">
 
             <label for="bairro">Bairro:</label>
-            <input type="text" id="bairro" name="bairro" required>
+            <input type="text" id="bairro" name="bairro" required oninput="validarLetras(this)">
 
             <label for="cidade">Cidade:</label>
-            <input type="text" id="cidade" name="cidade" required>
+            <input type="text" id="cidade" name="cidade" required oninput="validarLetras(this)">
 
             <label for="estado">Estado:</label>
-            <input type="text" id="estado" name="estado" required pattern="[A-Za-z]{2}">
+            <input type="text" id="estado" name="estado" required pattern="[A-Za-z]{2}" oninput="validarLetras(this)">
 
             <label for="email">E-mail:</label>
             <input type="email" id="email" name="email" required>
